--- a/Train_TFLite2_Object_Detction_Model.ipynb
+++ b/Train_TFLite2_Object_Detction_Model.ipynb
@@ -125,11 +125,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "ypWGYdPlLRUN"
+        "id": "ypWGYdPlLRUN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ec17c0c-4713-4186-af2f-9a19b335a651"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found existing installation: Cython 3.0.11\n",
+            "Uninstalling Cython-3.0.11:\n",
+            "  Successfully uninstalled Cython-3.0.11\n",
+            "Cloning into 'models'...\n",
+            "remote: Enumerating objects: 4318, done.\u001b[K\n",
+            "remote: Counting objects: 100% (4318/4318), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3335/3335), done.\u001b[K\n",
+            "remote: Total 4318 (delta 1207), reused 2032 (delta 910), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (4318/4318), 53.31 MiB | 36.41 MiB/s, done.\n",
+            "Resolving deltas: 100% (1207/1207), done.\n"
+          ]
+        }
+      ],
       "source": [
         "# Clone the tensorflow models repository from GitHub\n",
         "!pip uninstall Cython -y # Temporary fix for \"No module named 'object_detection'\" error\n",
@@ -138,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "6QPmVBSlLTzM"
       },
@@ -168,7 +189,7 @@
       "metadata": {
         "id": "NRBnuCKjM4Bd"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -186,9 +207,57 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OLDnCkLLwLr6"
+        "id": "OLDnCkLLwLr6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c146f3a-4d50-4389-a0b0-8560b68f3244"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pyyaml==5.3\n",
+            "  Downloading PyYAML-5.3.tar.gz (268 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/268.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m268.2/268.2 kB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: pyyaml\n",
+            "  Building wheel for pyyaml (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyyaml: filename=PyYAML-5.3-cp311-cp311-linux_x86_64.whl size=44244 sha256=8321ce9ff8bcdb7a9afb873d1dfb32dd622643af7fb0e60594ee620efbc73e4b\n",
+            "  Stored in directory: /root/.cache/pip/wheels/07/09/d2/ec5b4fe4e1160894d77b6546054a167e40e4229867c52107bf\n",
+            "Successfully built pyyaml\n",
+            "Installing collected packages: pyyaml\n",
+            "  Attempting uninstall: pyyaml\n",
+            "    Found existing installation: PyYAML 6.0.2\n",
+            "    Uninstalling PyYAML-6.0.2:\n",
+            "      Successfully uninstalled PyYAML-6.0.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "flax 0.10.2 requires PyYAML>=5.4.1, but you have pyyaml 5.3 which is incompatible.\n",
+            "dask 2024.10.0 requires pyyaml>=5.3.1, but you have pyyaml 5.3 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed pyyaml-5.3\n",
+            "Processing ./models/research\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting avro-python3 (from object_detection==0.1)\n",
+            "  Downloading avro-python3-1.10.2.tar.gz (38 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting apache-beam (from object_detection==0.1)\n",
+            "  Downloading apache_beam-2.63.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.3 kB)\n",
+            "Requirement already satisfied: pillow in /usr/local/lib/python3.11/dist-packages (from object_detection==0.1) (11.1.0)\n",
+            "Requirement already satisfied: lxml in /usr/local/lib/python3.11/dist-packages (from object_detection==0.1) (5.3.0)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from object_detection==0.1) (3.10.0)\n",
+            "Collecting Cython (from object_detection==0.1)\n",
+            "  Downloading Cython-3.0.12-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.3 kB)\n",
+            "Collecting contextlib2 (from object_detection==0.1)\n",
+            "  Downloading contextlib2-21.6.0-py2.py3-none-any.whl.metadata (4.1 kB)\n",
+            "Requirement already satisfied: tf-slim in /usr/local/lib/python3.11/dist-packages (from object_detection==0.1) (1.1.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from object_detection==0.1) (1.17.0)\n",
+            "Requirement already satisfied: pycocotools in /usr/local/lib/python3.11/dist-packages (from object_detection==0.1) (2.0.8)\n",
+            "Collecting lvis (from object_detection==0.1)\n",
+            "  Downloading lvis-0.5.3-py3-none-any.whl.metadata (856 bytes)\n"
+          ]
+        }
+      ],
       "source": [
         "# Install the Object Detection API (NOTE: This block takes about 10 minutes to finish executing)\n",
         "\n",
@@ -1727,7 +1796,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "collapsed_sections": [
         "4VAvZo8qE4u5",
         "sxb8_h-QFErO",
