--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -185,11 +185,33 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
-        "\n",
-        "!cp /content/gdrive/MyDrive/path/to/data.zip /content"
+        "\n"
       ],
       "metadata": {
-        "id": "ZfQBSwDdWoWp"
+        "id": "ZfQBSwDdWoWp",
+        "outputId": "daa9f401-988b-4ab3-b0e4-5ba186ac6668",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cp '/content/gdrive/MyDrive/Colab Notebooks/data.zip' /content"
+      ],
+      "metadata": {
+        "id": "K7ZXiqdnGcoi"
       },
       "execution_count": null,
       "outputs": []
@@ -211,19 +233,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ZQXLBvL5grDl"
-      },
-      "outputs": [],
-      "source": [
-        "# To use my one of pre-made dataset instead of your own custom dataset, download it here (control which dataset is downloaded by commenting out either line)\n",
-        "!wget -O /content/data.zip https://s3.us-west-1.amazonaws.com/evanjuras.com/resources/candy_data_06JAN25.zip # Candy dataset\n",
-        "#!wget -O /content/data.zip https://s3.us-west-1.amazonaws.com/evanjuras.com/resources/YOLO_coin_data_12DEC30.zip # Coin dataset"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## 2.2 Split images into train and validation folders"
@@ -243,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "z8O6z-wVcPEF"
       },
@@ -282,46 +291,47 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget -O /content/train_val_split.py https://raw.githubusercontent.com/EdjeElectronics/Train-and-Deploy-YOLO-Models/refs/heads/main/utils/train_val_split.py\n",
-        "\n",
-        "# TO DO: Improve robustness of train_val_split.py script so it can handle nested data folders, etc\n",
-        "!python train_val_split.py --datapath=\"/content/custom_data\" --train_pct=0.9"
+        "!wget -O /content/train_val_split.py https://raw.githubusercontent.com/EdjeElectronics/Train-and-Deploy-YOLO-Models/refs/heads/main/utils/train_val_split.py"
       ],
       "metadata": {
         "id": "8X62eFTugosf",
-        "outputId": "a5747789-2c77-4977-b9f5-f3c288db6363",
+        "outputId": "7e68fb87-c027-450a-df9d-833f3b4c878e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-03-08 06:36:25--  https://raw.githubusercontent.com/EdjeElectronics/Train-and-Deploy-YOLO-Models/refs/heads/main/utils/train_val_split.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2025-03-26 15:40:31--  https://raw.githubusercontent.com/EdjeElectronics/Train-and-Deploy-YOLO-Models/refs/heads/main/utils/train_val_split.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3203 (3.1K) [text/plain]\n",
             "Saving to: ‘/content/train_val_split.py’\n",
             "\n",
             "/content/train_val_ 100%[===================>]   3.13K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-03-08 06:36:25 (37.7 MB/s) - ‘/content/train_val_split.py’ saved [3203/3203]\n",
-            "\n",
-            "Created folder at /content/data/train/images.\n",
-            "Created folder at /content/data/train/labels.\n",
-            "Created folder at /content/data/validation/images.\n",
-            "Created folder at /content/data/validation/labels.\n",
-            "Number of image files: 12\n",
-            "Number of annotation files: 12\n",
-            "Images moving to train: 10\n",
-            "Images moving to validation: 2\n"
+            "2025-03-26 15:40:31 (52.8 MB/s) - ‘/content/train_val_split.py’ saved [3203/3203]\n",
+            "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TO DO: Improve robustness of train_val_split.py script so it can handle nested data folders, etc\n",
+        "!python train_val_split.py --datapath=\"/content/custom_data\" --train_pct=0.9"
+      ],
+      "metadata": {
+        "id": "9AaOpzVOHpLK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -346,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,7 +570,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
